force-app/main/default/objects/numm__ExchangeRate__c/numm__ExchangeRate__c.object-meta.xml
<CustomObject>
    <description>Objet des taux de changes</description>
    <label>Taux de Change</label>
    <nameField>
        <displayFormat>TCHA-{00000}</displayFormat>
        <label>Change</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taux de Change</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>