force-app/main/default/objects/numm__ExchangeRate__c/fields/numm__EndDate__c.field-meta.xml
<CustomField>
    <fullName>numm__EndDate__c</fullName>
    <inlineHelpText>date de fin d&#39;effet du taux de change</inlineHelpText>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>