force-app/main/default/objects/numm__ExchangeRate__c/fields/numm__ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>numm__ExchangeRate__c</fullName>
    <inlineHelpText>Le taux de change est exprimé par rapport à l&#39;euro. Exemple : un dollar est égal à 0,72 euros.</inlineHelpText>
    <label>Taux de change</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>