force-app/main/default/objects/numm__ExchangeRate__c/fields/numm__IdCurrency__c.field-meta.xml
<CustomField>
    <fullName>numm__IdCurrency__c</fullName>
    <label>Devise</label>
    <referenceTo>numm__currency__c</referenceTo>
    <relationshipName>ExchangeRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>