force-app/main/default/objects/numm__ExchangeRate__c/fields/numm__StartDate__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate__c</fullName>
    <inlineHelpText>Date du début d&#39;effet du taux de change</inlineHelpText>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>